# rtsim-browser

./: Cargo.toml
assets/common/abilities/custom/frostwyvern/: frostthrower.ron
assets/common/abilities/custom/gigas_frost/: icespike_smash.ron
assets/common/items/tool/instruments/: sitar.ron
assets/common/loot_tables/creature/quad_medium/: wool.ron
assets/voxygen/i18n/eu/: _manifest.ron
assets/voxygen/shaders/: debug-vert.glsl
assets/voxygen/shaders/antialias/: none.glsl
assets/world/wildlife/spawn/taiga/: water.ron
src/: editor.rs  main.rs  server.rs
